<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pt.unl.fct.di.novasys.babel</groupId>
    <artifactId>babel-sc-core</artifactId>
    <version>0.0.7</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
      <extensions>
            <!-- Enabling the use of SSH -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh-external</artifactId>
                <version>1.0-beta-6</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
               <executions> 
                    <execution> 
                        <id>attach-javadocs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                            <goal>javadoc</goal>
                        </goals> 
                    </execution> 
                </executions> 
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>novasys-mvn</id>
            <url>https://novasys.di.fct.unl.pt/packages/mvn</url>
        </repository>
    </repositories>

   <profiles>
            <profile>
                <id>novasys-deploy</id>
                    <activation>
                    <property>
                        <name>novasys</name>
                        </property>
                    </activation>
                <distributionManagement>
                    <repository>
                        <id>novasys-deploy</id>
                        <url>${NOVASYS_PACKAGE_MVN_PATH}</url>
                    </repository>
                    <snapshotRepository>
                        <id>novasys-deploy</id>
                        <url>${NOVASYS_PACKAGE_MVN_PATH}</url>
                    </snapshotRepository>
                </distributionManagement>
            </profile>
            <profile>
                <id>codelab-deploy</id>
                    <activation>
                      <property>
                        <name>codelab</name>
                      </property>
                    </activation>
               <distributionManagement>
                    <repository>
                        <id>codelab-deploy</id>
                        <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
                    </repository>
                    <snapshotRepository>
                        <id>codelab-deploy</id>
                        <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
                    </snapshotRepository>
                </distributionManagement>
            </profile>
    </profiles>
    
    <dependencies>
        <dependency>
            <groupId>pt.unl.fct.di.novasys</groupId>
            <artifactId>network-layer-j21</artifactId>
            <version>3.0.0</version>
        </dependency>
    </dependencies>

</project>
